test/testdata/result/not_indexable_error.lox
(try 1)[0]; // error: 'result' value is not indexable
